<resources>
    <string name="app_name">GradeRunner</string>
    <string name="assignment">Assignment:</string>
    <string name="course_name">Course:</string>
    <string name="due_date">Due Date:</string>
    <string name="id">ID:</string>
    <string name="add_data">Add Data</string>
    <string name="assignments_title">Assignments</string>
    <string name="exams_title">Exams</string>
    <string name="representative_title">Representative</string>
    <string name="student_rep_title">Student Rep Menu</string>
    <string name="rep_email">Rep email:</string>
    <string name="rep_name">Rep name:</string>
    <string name="grades">Grades</string>
    <string name="view_data">View Data</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="enter_course_name_hint">Enter course name</string>
    <string name="enter_assignment_name_hint">Enter assignment name</string>
    <string name="enter_due_date_hint">Enter due date</string>
    <string name="use_id_to_update_delete_hint">Use ID to update/delete</string>

</resources>
